[package]
name = "crypto-com-exchange"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Websocket library for crypto com exchange https://exchange-docs.crypto.com/spot/index.html#websocket-root-endpoints"


homepage = "https://github.com/maxpowel/rs-crypto-com-exchange"
repository = "https://github.com/maxpowel/rs-crypto-com-exchange"
documentation = "https://docs.rs/crypto-com-exchange/latest/crypto_com_exchange/"
readme = "README.md"
keywords = ["websocket", "crypto", "api", "exchange"]
categories = ["api-bindings", "asynchronous", "web-programming::websocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
tokio-tungstenite = { version = "0.16.1", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.19"
futures = "0.3.19"
flume = "0.10.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1"
log = "0.4"
hmac = "0.12.1"
sha2 = "0.10.2"
hex = "0.4.3"
