[package]
name = "crypto-com-exchange"
version = "1.0.8"
edition = "2021"
license = "Apache-2.0"
description = "Websocket library for crypto com exchange https://exchange-docs.crypto.com/spot/index.html#websocket-root-endpoints"


homepage = "https://github.com/maxpowel/rs-crypto-com-exchange"
repository = "https://github.com/maxpowel/rs-crypto-com-exchange"
documentation = "https://docs.rs/crypto-com-exchange/latest/crypto_com_exchange/"
readme = "README.md"
keywords = ["websocket", "crypto", "api", "exchange"]
categories = ["api-bindings", "asynchronous", "web-programming::websocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = { version = "0.19", features = ["rustls-tls-native-roots"] }
futures = "0.3.28"
anyhow = "1.0.71"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "^1.0.97"
serde-aux = "4.2.0"
hmac = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"
chrono = { version = "0.4.26", features=["serde"]}